# KNMI.nl-Dataloader

./: .gitignore  README.md  pyproject.toml  requirements.txt
data_engineering_project/: .gitignore  config.py  config.toml  dataloader.py  db_connection.py  download_test.py  feedback.md  h5file.py  init_wrangle.py  listen_nc.py  project.md  pyproject.toml  server.py  to_save.py  wrangle.py
data_engineering_project/data/: 1950-01-01T00:00:00->2025-12-01T00:00:00_fd52df3eb4f4948d29820f361e70359bb9f1114e72bb2ebbe2bf8a06.parquet
data_engineering_project/data_engineering_project/: KMDS__OPER_P___10M_OBS_L2_202405161720.nc  KMDS__OPER_P___10M_OBS_L2_202405161730.nc  KMDS__OPER_P___10M_OBS_L2_202405161740.nc  KMDS__OPER_P___10M_OBS_L2_202405161750.nc  KMDS__OPER_P___10M_OBS_L2_202405161800.nc  KMDS__OPER_P___10M_OBS_L2_202405161810.nc  KMDS__OPER_P___10M_OBS_L2_202405161820.nc  KMDS__OPER_P___10M_OBS_L2_202405161830.nc  KMDS__OPER_P___10M_OBS_L2_202405161840.nc  KMDS__OPER_P___10M_OBS_L2_202405161850.nc  KMDS__OPER_P___10M_OBS_L2_202405161900.nc  KMDS__OPER_P___10M_OBS_L2_202405161910.nc  KMDS__OPER_P___10M_OBS_L2_202405161920.nc  KMDS__OPER_P___10M_OBS_L2_202405161930.nc  KMDS__OPER_P___10M_OBS_L2_202405161940.nc  KMDS__OPER_P___10M_OBS_L2_202405161950.nc  KMDS__OPER_P___10M_OBS_L2_202405162000.nc  KMDS__OPER_P___10M_OBS_L2_202405162010.nc  KMDS__OPER_P___10M_OBS_L2_202405162020.nc  KMDS__OPER_P___10M_OBS_L2_202405162030.nc  KMDS__OPER_P___10M_OBS_L2_202405162040.nc  KMDS__OPER_P___10M_OBS_L2_202405162050.nc  KMDS__OPER_P___10M_OBS_L2_202405162100.nc  (+77 more)
reports/: 1.md  2.md  (+7 more)
(+11 files in other folders)
