[tool.poetry]
name = "data-engineering-project"
version = "0.1.0"
description = ""
authors = ["Quinten Cabo <tintin10q@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^2.0.0"
h5py = "^3.11.0"
duckdb = "^1.0.0"
httpx = "^0.27.0"
nctoolkit = "^1.1.10"
jupyter = "^1.0.0"
torch = "^2.3.0"
tomark = "^0.1.4"
dill = "^0.3.8"
toml = "^0.10.2"
pyarrow = "^16.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
listen-nc = "data_engineering_project.listen_nc:run"
start-api = "data_engineering_project.server:start"
