[tool.poetry]
name = "data-engineering-project"
version = "0.1.0"
description = ""
authors = ["Quinten Cabo <tintin10q@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
paho-mqtt = "^2.0.0"
h5py = "^3.11.0"
duckdb = "^0.10.2"
httpx = "^0.27.0"
nctoolkit = "^1.1.10"
jupyter = "^1.0.0"
torch = "^2.3.0"
tomark = "^0.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
